--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>My first website!</title>
 </head>
-<body>
+<body style="background-color:blue;">
 	<a href="newpage.html">New Page</a><br>
 	<a href="register.html">Register</a>
 	<ul>
